# gluck

./: .gitmodules  CMakeLists.txt  readme.md
assets/shaders/: cube.frag  cube.vert  simple.frag  simple.vert
src/: bitmap.h  main.cpp  material.h  scene.cpp  scene.h
src/Common/: bitmap.h  uuid.h
src/Core/: BufferAttribute.h  BufferGeometry.h  Camera.h  Light.h  Material.h  Mesh.h  Model.h  Renderer.h  Scene.h  Texture.h  Transform.h  Window.h
src/GLRenderer/: GLCamera.h  GLLight.h  GLMaterial.h  GLMesh.h  GLProgram.h  GLRenderTarget.h  GLRenderer.h  GLSkybox.h  GLTexture.h  GLTransform.h
